solc_ossfuzz_seed_corpus/test_solidity/test_d44c44d12d36f70b960a4a72b20555e0f08f69d1dcd870890c2eb3f512c43539_24b82f3fe10561b89edf388750f42d98d35af7f7_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
function f0(address i0)    
{
}
type T0 is uint152;
contract C0 {
  modifier m0() 
  {
    _;
    bool l0 = false;
    _;
    T0 l1 = T0.wrap(uint152(3768281107241819765992276705896826901602049780));
    (bool l2, bytes memory l3) = address(this).call("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff");
  }
  T0   s0;
  T0   s1 = T0.wrap(uint152(0));
  bool  public s2 = true;
  constructor(T0 i0)   {
    s0 = T0.wrap(uint152(0));
    unchecked {
      delete s2;
      if (((int32(-1659439330) == int32(2147483647)) || false))
      {
      }
      else if ((!((uint32((((uint32(4294967295) & uint32(4294967295)) & uint32(0)) / uint32(0))) > uint32(1837587989)))))
      {
        (bool l0, bytes memory l1) = address(this).call("00000000000000000000000000000000000000000000000000000000000000499f36833b7bb95f9197f84b");
      }
      else if (((int232(-111429958392985797588878939899909069244690713126672101421763765388059) % int232((int232(0) / (int232(0) | int232(3450873173395281893717377931138512726225554486085193277581262111899647))))) < int232(0)))
      {
      }
      f0({i0: address(this)});
      (bool l2, bytes memory l3) = address(this).call(bytes("ffffffffffffffffff000000000000000000000000000000000000000000000000000000"));
    }
  }
  function f1(T0 i0,bytes calldata i1,function (address, bytes7) external   returns (int152, bytes30, bool) i2) public  m0() 
  {
  }
  type T1 is address payable;
  function f2(address payable i0) external virtual  payable returns(bytes18[] memory o0)
  {
  }
  address public constant cons0 = 0x8e7dd59E2C9AC1411Ed90Ce19cA89E82dc671B2c;
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36, M37, M38, M39,
    M40, M41, M42, M43, M44, M45, M46, M47,
    M48, M49, M50, M51, M52, M53, M54, M55,
    M56, M57, M58, M59, M60, M61, M62, M63,
    M64, M65, M66, M67, M68, M69, M70
  }
}
contract C1 {
  fallback() external   
  {
    (bool l0, bytes memory l1) = address(this).call(bytes("ffffffffffffffffffffffffffffffffffff000000000000000000000000000000000000000000000000000000000000"));
    return;
    if (false)
    {
      (bool l2, bytes memory l3) = address(this).call(bytes("00000000000000000000000000000000000000000000000000000000000000"));
    }
    else
    {
    }
    for(;
;
)
    {
    }
  }
  modifier m1() 
  {
    _;
  }
  type T2 is bytes14;
  bytes27 immutable public s3;
  uint208  public s4 = uint208(381357429936147551318283323590243015763490690741084309819743447);
  bytes5  public s5;
  address immutable public s6 = address(this);
  constructor(bytes27 i0,bytes5 i1)   {
    s3 = bytes27(0x83ca8ab362a4a09606af1a23080d1c4f1f18f1a77ab382b99ce520);
    s5 = bytes5(0x8a377d4bf0);
    unchecked {
      for(      C0 l0 = new C0{salt: sha256("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff")}(T0.wrap(uint152(638914078295637133517928637893916415549147404)));
;
)
      {
        continue;
        delete s4;
      }
    }
  }
  error er0(address payable ep0);
  event ev0(function (string memory, bool) external    ep0, address  ep1);
}
// ----
// Warning 5740: (su0.sol:2256-2427): Unreachable code.
// Warning 5740: (su0.sol:2432-2453): Unreachable code.
// Warning 5740: (su0.sol:3110-3119): Unreachable code.
// Warning 5667: (su0.sol:437-442): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su0.sol:730-737): Unused local variable.
// Warning 2072: (su0.sol:739-754): Unused local variable.
// Warning 2072: (su0.sol:1158-1165): Unused local variable.
// Warning 2072: (su0.sol:1167-1182): Unused local variable.
// Warning 2072: (su0.sol:2085-2092): Unused local variable.
// Warning 2072: (su0.sol:2094-2109): Unused local variable.
// Warning 2072: (su0.sol:2280-2287): Unused local variable.
// Warning 2072: (su0.sol:2289-2304): Unused local variable.
// Warning 5667: (su0.sol:2722-2732): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:2733-2742): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su0.sol:2887-2892): Unused local variable.
// CodeGenerationError 1284: Some immutables were read from but never assigned, possibly because of optimization.
